--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
+  - namespace.yaml
   # v1.5.2
   - github.com/argoproj/argo-cd/manifests/cluster-install?ref=c2c19f42ad78ed7a6fb70e86aed117be484feb50
