argocd: KSOPS integration

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - namespace.yaml
   # v1.5.2
   - github.com/argoproj/argo-cd/manifests/cluster-install?ref=c2c19f42ad78ed7a6fb70e86aed117be484feb50
+patches:
+  - argo-cd-repo-server-ksops-patch.yaml
