--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -10,5 +10,11 @@ patches:
   - argo-cd-allow-alpha-plugins-patch.yaml
   - argo-cd-import-pgp-key.yaml
 images:
-  - name: 'argoproj/argocd:v1.5.3'
-    digest: 60edd3283acbfc83cc6e23218c3882d512273f4a3073940b1619f8d8be9c6a1e
+  - name: argoproj/argocd:v1.5.3
+    digest: sha256:60edd3283acbfc83cc6e23218c3882d512273f4a3073940b1619f8d8be9c6a1e
+  - name: quay.io/dexidp/dex:v2.22.0
+    digest: sha256:01e996b4b60edcc5cc042227c6965dd63ba68764c25d86b481b0d65f6e4da308
+  - name: redis:5.0.3
+#     digest: sha256:0f88f9be58390a5d67c1a7dbcd08691e059fea2dba7cef42dfc41fab513f43bb
+  - name: viaductoss/ksops:v2.1.0
+    digest: sha256:2f21264a483056102523be37431ba7971d991f2aa872c725f22fa074005b1d26
