argocd: add missing self-management application

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - github.com/argoproj/argo-cd/manifests/cluster-install?ref=0fdef4861e12026e133224f7c9413072340e2983
   - argo-cd-service-monitor.yaml
   # Applications to deploy
+  - applications/argocd.yaml
   - applications/example-book.yaml
   - applications/prometheus-operator.yaml
 patches:
