--- a/prometheus-operator/kustomization.yaml
+++ b/prometheus-operator/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   # v0.38.1
   - github.com/coreos/prometheus-operator?ref=00cbd4911f931380cf9e19d771d7ebae1ec0a807
+  - prometheus-operator-metrics.yaml
   - prometheus-instance.yaml
 images:
   - name: quay.io/coreos/prometheus-operator:v0.38.1
